# img2txt

./: CMakeLists.txt  README.md  main.cpp  main_v0.cpp
